--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <footer>
             <h4>Mind you guys, I do use TLauncher so I might not be able to upload hypixel build battle vids  :(<br>
             <div id="box3">I will try and play some hypixel ripoffs (Cracked Servers like hypixel)if the demand is enough.</div></h4>
-            <h5>If you want me to play some games that you want me to play then comment them in my vids.</h5>
+            <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
             <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
             <p><div id="Para"><br><img src="./100 Days Hardcore.png"><br>So the Hardcore series is inspired by this vid on youtube.<br>
                 Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy the series. ;)</div></p>
