--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
             <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
             <p><div id="Para"><br><img src="./100 Days Hardcore.png"><br>So the Hardcore series is inspired by this vid on youtube.<br>
-                Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy the series. ;)</div></p>
+                Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy the game. ;)</div></p>
                 <img src="./Spruce Biome.png" id="Spruce"><br><br><img src="./Minecraft Home.png" id="Home"><br><br><img src="./Minecraft Castle.png" id="Castle"><br><br><img src="./Minecraft View.png" id="View"><br><br><img src="./Minecraft Ocean Update.png" id="Ocean">
          </footer>
 </body>
