--- a/Requirments.html
+++ b/Requirments.html
@@ -17,12 +17,10 @@
        7)Baisc Minecraft knowledge is also required.
     </p>
     <div id="RQ"><b>That's It <i>;)</i></b></div><br>
+       <a href="https://forms.gle/e9omaqv4N8Uyo7J68">google</a>
     <div>
-        <input value="First Name">
-        <input value="Last Name">
-        <input type="submit" value="Submit">
     </div>
-      <p>Click the "Submit" button and the data will be sent to MTanker24.</p>
+      <p>The data will be sent to MTanker24.</p>
       <br><p>All the best, hope you get qualiflied.</p><br>
       <br><p>Guy's The recording of the videos has started so sign as fast as posible</p>
 </body>
