--- a/Requirments.html
+++ b/Requirments.html
@@ -17,7 +17,7 @@
        7)Baisc Minecraft knowledge is also required.
     </p>
     <div id="RQ"><b>That's It <i>;)</i></b></div><br>
-       <a href="https://forms.gle/e9omaqv4N8Uyo7J68">Use this form</a>
+       <a href="https://forms.gle/e9omaqv4N8Uyo7J68">Use this form to submit your data</a>
     </div>
       <p>The data will be sent to MTanker24.</p>
       <br><p>All the best, hope you get eligible.</p><br>
