--- a/Requirments.html
+++ b/Requirments.html
@@ -22,5 +22,9 @@
       <p>The data will be sent to MTanker24.</p>
       <br><p>All the best, hope you get eligible.</p><br>
       <br><p>Also, the recording of the videos has started so sign as fast as posible</p>
+    <footer>
+        a href="./index.html">Hone Page</a>
+    </footer>
+
 </body>
 </html>
