--- a/Requirments.html
+++ b/Requirments.html
@@ -23,7 +23,7 @@
       <br><p>All the best, hope you get eligible.</p><br>
       <br><p>Also, the recording of the videos has started so sign as fast as posible</p>
     <footer>
-        a href="./index.html">Hone Page</a>
+        <a href="./index.html">Hone Page</a>
     </footer>
 
 </body>
