--- a/Requirments.html
+++ b/Requirments.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <h1>The few requirments for qualiflying are:</h1>
     <p>1)You must have Minecraft Java Edition.(Pocket or Windows 10 Edition will not be considered.)<br>
-       2)Your pc/laptop must be good enough to get at least 60 fps in-game.<br>
+       2)Your pc/laptop must be good enough to get at least 60 fps in-game, preferably while recording.<br>
        3)You must have enough internet connection so you don't lag on the server.<br>
        4)You must have a good screenrecorder, if in case your screen will be shown. Just joking it will be shown!<br>
        5)Tlauncher or other launchers with cracked minecraft are aceppted.  <i>;)</i><br>
