--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div id="box3">I will try and play some hypixel ripoffs (Cracked Servers like hypixel)if the demand is enough.</div></h4>
             <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
             <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
-            <p><div id="Para"><br><img src="./100 Days Hardcore.png"><br>So the Hardcore series is inspired by this vid on youtube.<br>
+            <p><br>
                 Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy the game. ;)</div></p>
-                <img src="./Spruce Biome.png" id="Spruce"><br><br><img src="./Minecraft Home.png" id="Home"><br><br><img src="./Minecraft Castle.png" id="Castle"><br><br><img src="./Minecraft View.png" id="View"><br><br><img src="./Minecraft Ocean Update.png" id="Ocean">
+                <img src="./Spruce Biome.png" id="Spruce"><br>The gane looks awesome<br><img src="./Minecraft Home.png" id="Home"><br>I will most likely be using shaders<br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
          </footer>
 </body>
 </html>
