--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
             <p><br>
                 Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy the game. ;)</div></p>
+        <div id ="box3">
                 <img src="./Spruce Biome.png" id="Spruce"><br>The gane looks awesome<br><img src="./Minecraft Home.png" id="Home"><br>I will most likely be using shaders<br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
-         </footer>
+        </div>
+    </footer>
 </body>
 </html>
