--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     </head>
     <body>
         <h1>Hey Fellas</h1>
-        <p><i>Welcome to my webpage.</i></p>
+        <p><i>Welcome to my website.</i></p>
         <div id="box">So, This might be the first time of you coming across me and my channel so here's a brief intro on me</div><br>
 
-        <div id="box1"><h2>So, I'm a Minecraft youtuber (I'm not one but the channel is starting.)</h2>
+        <div id="box1"><h2>So, I'm a Minecraft youtuber (I'm not one but the <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">channel</a> is starting.)</h2>
         <p>2)There is also going to be a Minecraft Hardcore let's play which is starting soon.</p></div>
         <p><img src="./Hardcore.png"><br>Yay!</p>
         <link rel="stylesheet" href="./style.css">
