--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <html>
     <head>
-        <title>MTanker24</title>
+        <title>MTanker27</title>
     </head>
     <body>
+        <img src="./mtanker27.jpg">
         <h1>Hey Fellas</h1>
         <p><i>Welcome to my website.</i></p>
         <div id="box">So, This might be the first time of you coming across me and my channel so here's a brief intro on me</div><br>
 
-        <div id="box1"><h2>So, I'm a Minecraft youtuber (I'm not one but the <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">channel</a> is starting.)</h2>
+        <div id="box1"><h2>So, I'm a Minecraft youtuber (I'm not one but the <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">channel</a> is starting)</h2>
         <p>1)There is going to be a Minecraft Hardcore let's play which is starting soon.</p></div>
-        <p><img src="./Hardcore.png"><br>Yay!</p>
+        <p><img src="./Hardcore.png"></p>
         <link rel="stylesheet" href="./style.css">
+        <p>
+            Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy the game. ;)</div>
+        </p>
+        <div id ="box4">
+            <img src="./Spruce Biome.png" id="Spruce"><br>The game looks awesome<br><img src="./Minecraft Home.png" id="Home"><br>I will most likely be using shaders<br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
+        </div>
         <footer id="footer">
-            <p>This is just my way to reach to for people coming to play with me in my worlds, and join me in my vids.
+            <p>This is just my way to reach to for people coming to play with me in my worlds, and join me in my videos.
             <br>If you want to join me in my minecraft series then these are <a href="./Requirments.html">the Requirments</a>
             </p>
             <h4>Mind you guys, I do use TLauncher so I might not be able to upload hypixel build battle vids  :(<br>
             <div id="box3">I will try and play some hypixel ripoffs (Cracked Servers like hypixel)if the demand is enough.</div></h4>
             <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
-            <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
-            <p><br>
-                Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy the game. ;)</div>
-                    <div id ="box4">
-                            <img src="./Spruce Biome.png" id="Spruce"><br>The game looks awesome<br><img src="./Minecraft Home.png" id="Home"><br>I will most likely be using shaders<br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
-                    </div>
-            </p>
-    </footer>
+            <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div> 
+        </footer>      
+        
 </body>
 </html>
