--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <h4>Mind you guys, I do use TLauncher so I might not be able to upload hypixel build battle vids  :(<br>
             <div id="box3">I will try and play some hypixel ripoffs (Cracked Servers like hypixel)if the demand is enough.</div></h4>
             <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
-            <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div> 
+            <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
+            <p>Contact me;<br>MTanker27@gmail.com</p>
         </footer>      
         
 </body>
