--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
         <title>MTanker27</title>
     </head>
     <body>
-        <img src="./mtanker27.jpg">
-        <h1>Hey Fellas</h1>
-        <p><i>Welcome to my website.</i></p>
+        <img src="./mtanker27.jpg" id="mtanker">
+        <h1>Hey Fellas  <i>Welcome to my website.</i></h1>
         <div id="box">So, This might be the first time of you coming across me and my channel so here's a brief intro on me</div><br>
 
         <div id="box1"><h2>So, I'm a Minecraft youtuber (I'm not one but the <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">channel</a> is starting)</h2>
-        <p>1)There is going to be a Minecraft Hardcore let's play which is starting soon.</p></div>
-        <p><img src="./Hardcore.png"></p>
+        <p>
+            1)There is going to be a Minecraft Hardcore let's play which is starting soon.<br>
+            2)I make content like hardcore survival, multiplayer hardcore, survival, and multiplayer survival
+        </p></div>
         <link rel="stylesheet" href="./style.css">
         <p>
-            Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy the game. ;)</div>
+            Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy and likely the game. ;)</div>
         </p>
         <div id ="box4">
             <img src="./Spruce Biome.png" id="Spruce"><br>The game looks awesome<br><img src="./Minecraft Home.png" id="Home"><br>I will most likely be using shaders<br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
