--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         </p></div>
         <link rel="stylesheet" href="./style.css">
         <p>
-            Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy and likely the game. ;)</div>
+            Here are some Minecraft images from <a href="https://www.google.com/search?q=minecraft+survival&tbm=isch&hl=en&nfpr=1&rlz=1C1GCEU_enIN827IN827&hl=en&sa=X&ved=2ahUKEwiGnNTH-YPsAhVPHHIKHe0BDfEQBXoECAEQKA&biw=1349&bih=625">google</a>. Hope you guys enjoy and like the game. ;)</div>
         </p>
         <div id ="box4">
-            <img src="./Spruce Biome.png" id="Spruce"><br>The game looks awesome<br><img src="./Minecraft Home.png" id="Home"><br>I will most likely be using shaders<br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
+            <img src="./Spruce Biome.png" id="Spruce"><br>The game looks awesome<br><img src="./Minecraft Home.png" id="Home"><br>I will be using shaders<br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
         </div>
         <footer id="footer">
             <p>This is just my way to reach to for people coming to play with me in my worlds, and join me in my videos.
