--- a/Requirments.html
+++ b/Requirments.html
@@ -8,24 +8,22 @@
 <body>
     <link rel="stylesheet" href="./style.css">
     <h1>The few requirments for qualiflying are:</h1>
-    <p>
-       1)You must have Minecraft Java Edition.(Pocket or Windows 10 Edition will not be considered.)<br>
-       2)Your pc/laptop must be good enough to get at least 60 fps in-game, preferably while recording.<br>
+    <p>1)You must have Minecraft Java Edition.(Pocket or Windows 10 Edition will not be considered.)<br>
+       2)Your pc/laptop must be good enough to get at least 60 fps in-game.<br>
        3)You must have enough internet connection so you don't lag on the server.<br>
-       4)You must have a good screenrecorder, if in case your screen will be shown. Just joking it will be shown!<br>
+       4)You must have OBS or any other good screenrecorder, if in case your screen will be shown. Just joking it will be shown!<br>
        5)Tlauncher or other launchers with cracked minecraft are aceppted.  <i>;)</i><br>
        6)Optifine is a must.<br>
-       7)Basic Minecraft knowledge is also required.
+       7)Baisc Minecraft knowledge is also required.
     </p>
     <div id="RQ"><b>That's It <i>;)</i></b></div><br>
-       <a href="https://forms.gle/e9omaqv4N8Uyo7J68">Use this form to submit your data</a>
+    <div>
+        <input value="First Name">
+        <input value="Last Name">
+        <input type="submit" value="Submit">
     </div>
-      <p>The data will be sent to MTanker24.</p>
-      <br><p>All the best, hope you get eligible.</p><br>
-      <br><p>Also, the recording of the videos has started so sign as fast as posible</p>
-    <footer>
-        <a href="./index.html">Home Page</a>
-    </footer>
-
+      <p>Click the "Submit" button and the data will be sent to MTanker24.</p>
+      <br><p>All the best, hope you get qualiflied.</p><br>
+      <br><p>Guy's The recording of the videos has started so sign as fast as posible</p>
 </body>
 </html>
