--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <img src="./mtanker27.jpg" id="mtanker">
-        <h1>Hey Fellas  <i>Welcome to my website.</i></h1>
+        <h1>Welcome to my website.</h1>
         <div id="box">So, This might be the first time of you coming across me and my channel so here's a brief intro on me</div><br>
 
         <div id="box1"><h2>So, I'm a Minecraft youtuber (I'm not one but the <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">channel</a> is starting)</h2>
