--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <div id="box3">I will try and play some hypixel ripoffs (Cracked Servers like hypixel)if the demand is enough.</div></h4>
             <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
             <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
-            <p>Contact me;<br>MTanker27@gmail.com</p>
+            <p>Contact me;<br>MTanker27@gmail.com<br>MTanker27#8485</p>
+            <p id="©">©2021 MTanker27</p>
         </footer>      
         
 </body>
