--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>MTanker27</title>
+         <link rel="shortcut icon" href="/mtanker.png">
     </head>
     <body>
         <img src="./mtanker27.jpg" id="mtanker">
@@ -27,7 +28,7 @@
             <div id="box3">I will try and play some hypixel ripoffs (Cracked Servers like hypixel)if the demand is enough.</div></h4>
             <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
             <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
-            <p>Contact me;<br>MTanker27@gmail.com<br>MTanker27#8485</p>
+            <p>Contact me;<br>Email- MTanker27@gmail.com<br>Discord- MTanker27#8485</p>
             <p id="©">©2021 MTanker27</p>
         </footer>      
         
