--- a/Requirments.html
+++ b/Requirments.html
@@ -18,11 +18,9 @@
     </p>
     <div id="RQ"><b>That's It <i>;)</i></b></div><br>
     <div>
-        <input value="First Name">
-        <input value="Last Name">
-        <input type="submit" value="Submit">
+        <p>Use this <a href="https://forms.gle/Rs1zeu145BRKKWV6A">form</a> to submit the data to MTanker27</p>
     </div>
-      <p>Click the "Submit" button and the data will be sent to MTanker24.</p>
+      <p>The data will be sent to MTanker24.</p>
       <br><p>All the best, hope you get qualiflied.</p><br>
       <br><p>Guy's The recording of the videos has started so sign as fast as posible</p>
 </body>
