--- a/Requirments.html
+++ b/Requirments.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Requirments</title>
+    <link rel="shortcut icon" href="/mtanker.png">
 </head>
 <body>
     <link rel="stylesheet" href="./style.css">
@@ -21,7 +22,7 @@
         <p>Use this <a href="https://forms.gle/Rs1zeu145BRKKWV6A">form</a> to submit the data to MTanker27</p>
     </div>
       <p>The data will be sent to MTanker24.</p>
-      <br><p>All the best, hope you get qualiflied.</p><br>
+      <br><p>All the best, hope you get eligible.</p><br>
       <br><p>Guy's The recording of the videos has started so sign as fast as posible</p>
 </body>
 </html>
