--- a/Requirments.html
+++ b/Requirments.html
@@ -10,12 +10,11 @@
     <link rel="stylesheet" href="./style.css">
     <h1>The few requirments for qualiflying are:</h1>
     <p>1)You must have Minecraft Java Edition.(Pocket or Windows 10 Edition will not be considered.)<br>
-       2)Your pc/laptop must be good enough to get at least 60 fps in-game.<br>
-       3)You must have enough internet connection so you don't lag on the server.<br>
-       4)You must have OBS or any other good screenrecorder, if in case your screen will be shown. Just joking it will be shown!<br>
-       5)Tlauncher or other launchers with cracked minecraft are aceppted.  <i>;)</i><br>
-       6)Optifine is a must.<br>
-       7)Baisc Minecraft knowledge is also required.
+       2)Your pc/laptop must be good enough to get at least 60 fps in-game, while recording.<br>
+       3)You must have OBS or any other good screenrecorder, if in case your screen will be shown. Just joking it will be shown!<br>
+       4)Tlauncher or other launchers with cracked minecraft are accepted.  <i>;)</i><br>
+       5)Optifine is a must.<br>
+       6)Baisc Minecraft knowledge is also required.
     </p>
     <div id="RQ"><b>That's It <i>;)</i></b></div><br>
     <div>
