--- a/Requirments.html
+++ b/Requirments.html
@@ -22,6 +22,6 @@
     </div>
       <p>The data will be sent to MTanker24.</p>
       <br><p>All the best, hope you get eligible.</p><br>
-      <br><p>Guy's The recording of the videos has started so sign as fast as posible</p>
+      <br><p>The recording of the videos has started so be sure to sign up as fast as posible</p>
 </body>
 </html>
