--- a/Requirments.html
+++ b/Requirments.html
@@ -23,5 +23,11 @@
       <p>The data will be sent to MTanker24.</p>
       <br><p>All the best, hope you get eligible.</p><br>
       <br><p>The recording of the videos has started so be sure to sign up as fast as posible</p>
+    <footer>
+         <a href="./index.html">Home page</a>
+        <>
+            Contact me;<br>Email- MTanker27@gmail.com<br>Discord- MTanker27#8485<br>©2021 MTanker27
+        <>
+    </footer>
 </body>
 </html>
