--- a/Requirments.html
+++ b/Requirments.html
@@ -24,10 +24,10 @@
       <br><p>All the best, hope you get eligible.</p><br>
       <br><p>The recording of the videos has started so be sure to sign up as fast as posible</p>
     <footer>
-         <a href="./index.html">Home page</a>
-        <>
+         <a href="./index.html">Home page</a><br>
+        <p>
             Contact me;<br>Email- MTanker27@gmail.com<br>Discord- MTanker27#8485<br>©2021 MTanker27
-        <>
+        </p>
     </footer>
 </body>
 </html>
