--- a/Requirments.html
+++ b/Requirments.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Requirments</title>
+    <title>Requirements</title>
     <link rel="shortcut icon" href="/mtanker.png">
 </head>
 <body>
     <link rel="stylesheet" href="./style.css">
-    <h1>The few requirments for qualiflying are:</h1>
+    <h1>The few requirements for qualiflying are:</h1>
     <p>1)You must have Minecraft Java Edition.(Pocket or Windows 10 Edition will not be considered.)<br>
        2)Your pc/laptop must be good enough to get at least 60 fps in-game, while recording.<br>
        3)You must have OBS or any other good screenrecorder, if in case your screen will be shown. Just joking it will be shown!<br>
@@ -21,8 +21,7 @@
         <p>Use this <a href="https://forms.gle/Rs1zeu145BRKKWV6A">form</a> to submit the data to MTanker27</p>
     </div>
       <p>The data will be sent to MTanker24.</p>
-      <br><p>All the best, hope you get eligible.</p><br>
-      <br><p>The recording of the videos has started so be sure to sign up as fast as posible</p>
+      <br><p>All the best, hope you get eligible.</p>
     <footer id ="footer">
          <a href="./index.html">Home page</a><br>
         <p>
