--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>This is just my way to reach to for people coming to play with me in my worlds, and join me in my videos.
             <br>If you want to join me in my minecraft series then these are <a href="./Requirments.html">the Requirments</a>
             </p>
-            <h4>Mind you guys, I do use TLauncher so I might not be able to upload hypixel build battle vids  :(<br>
+            <h4>Mind you guys, I do use TLauncher so I might not be able to upload hypixel videos  :(<br>
             <div id="box3">I will try and play some hypixel ripoffs (Cracked Servers like hypixel)if the demand is enough.</div></h4>
             <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
             <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
