--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
             <br>If you want to join me in my minecraft series then these are <a href="./Requirments.html">the Requirments</a>
             </p>
             <h4>Mind you guys, I do use TLauncher so I might not be able to upload hypixel videos  :(<br>
-            <div id="box3">I will try and play some hypixel ripoffs (Cracked Servers like hypixel)if the demand is enough.</div></h4>
-            <h5>If you want me to play some games that you want me to play then comment them in my videos.</h5>
-            <div id="box2">Just remenber NO <i><b><u>FPS's, no Battle Royales.</u></b></i></div>
+            <div id="box3">I will try and play some hypixel ripoffs, if the demand is enough.</div></h4><br><br>
             <p>My youtube <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">channel</a><br>Join my <a href="https://patreon.com/MTanker27">patreon</a>. Exclusive downloads and early access to my videos will be avalaible over there<br><br><br>Contact me;<br>Email- MTanker27@gmail.com<br>Discord- MTanker27#8485</p>
             <p id="©">©2021 MTanker27</p>
         </footer>      
