--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <div id="box3">I will try and play some hypixel ripoffs, if the demand is enough.</div></h4><br><br>
             <p>My youtube <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">channel</a><br>Join my <a href="https://patreon.com/MTanker27">patreon</a>. Exclusive downloads and early access to my videos will be avalaible over there<br><br><br>Contact me;<br>Email- MTanker27@gmail.com<br>Discord- MTanker27#8485</p>
             <p id="©">©2021 MTanker27</p>
-        </footer>      
+        </footer> 
+<style>
+background-image: "mtanker.png";
+</style>
         
 </body>
 </html>
