--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             Here are some Minecraft images from <a href="http://bit.ly/3rd1ubI">google</a>. Hope you guys enjoy and like the game. ;)</div>
         </p>
         <div id ="box4">
-            <img src="./Spruce Biome.png" id="Spruce"><br>The game looks awesome<br><img src="./Minecraft Home.png" id="Home"><br>I will be using shaders<br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
+            <img src="./Spruce Biome.png" id="Spruce"><br>The game looks awesome<br><img src="./Minecraft Home.png" id="Home"><br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
         </div>
         <footer id="footer">
             <p>This is just my way to reach to for people coming to play with me in my worlds, and join me in my videos.
