--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
         <p>
             Here are some Minecraft images from <a href="http://bit.ly/3rd1ubI">google</a>. Hope you guys enjoy and like the game. ;)</div>
         </p>
-        <div id ="box4">
-            <img src="./Spruce Biome.png" id="Spruce"><br>The game looks awesome<br><img src="./Minecraft Home.png" id="Home"><br><img src="./Minecraft Castle.png" id="Castle"><br>Hope you guys enjoy the videos<br><img src="./Minecraft View.png" id="View"><br>Please sub, like comment and share<br><img src="./Minecraft Ocean Update.png" id="Ocean">
-        </div>
         <footer id="footer">
             <p>This is just my way to reach to for people coming to play with me in my worlds, and join me in my videos.
             <br>If you want to join me in my minecraft series then these are <a href="./Requirments.html">the Requirments</a>
             </p>
             <h4>Mind you guys, I do use TLauncher so I might not be able to upload hypixel videos  :(<br>
             <div id="box3">I will try and play some hypixel ripoffs, if the demand is enough.</div></h4><br><br>
-            <p>My youtube <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">channel</a><br>Join my <a href="https://patreon.com/MTanker27">patreon</a>. Exclusive downloads and early access to my videos will be avalaible over there<br><br><br>Contact me;<br>Email- MTanker27@gmail.com<br>Discord- MTanker27#8485</p>
+            <p>My <a href="https://www.youtube.com/channel/UCW_pKU1m0BA-reN6NlIYSRA">youtube channel</a><br>Join my <a href="https://patreon.com/MTanker27">patreon</a>. Exclusive downloads and early access to my videos will be avalaible over there<br><br>
+            <br>Contact me;<br>Email- MTanker27@gmail.com<br>Discord- MTanker27#8485</p>
             <p id="©">©2021 MTanker27</p>
         </footer> 
         
